EPMRPP-33156: Fix pagination size input values. EPMRPP-34112: Add default sorting to the filters page. Hide grid checkbox cell on mobile screen. Fix pagination buttons on mobile screen. Reset active page on changing page size.

--- a/app/src/components/main/paginationToolbar/pageButtons/pageButtons.scss
+++ b/app/src/components/main/paginationToolbar/pageButtons/pageButtons.scss
@@ -1,3 +1,9 @@
 .page-buttons {
   display: inline-block;
+
+  @media (max-width: $SCREEN_SM_MAX) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
